# xdg

./: .buildinfo  CMakeLists.txt  annotated.html  classMBDirectAccess-members.html  classMBDirectAccess.html  classMeshMock-members.html  classMeshMock.html  classMeshMock__coll__graph.dot  classProgressBar-members.html  classProgressBar.html  classes.html  classxdg_1_1EmbreeRayTracer-members.html  classxdg_1_1EmbreeRayTracer.html  classxdg_1_1EmbreeRayTracer__inherit__graph.dot  classxdg_1_1GPRTRayTracer-members.html  classxdg_1_1GPRTRayTracer.html  classxdg_1_1GPRTRayTracer__inherit__graph.dot  classxdg_1_1LibMeshManager-members.html  classxdg_1_1LibMeshManager.html  classxdg_1_1LibMeshManager__inherit__graph.dot  classxdg_1_1MBDirectAccess-members.html  classxdg_1_1MBDirectAccess.html  classxdg_1_1MOABMeshManager-members.html  classxdg_1_1MOABMeshManager.html  classxdg_1_1MOABMeshManager__coll__graph.dot  classxdg_1_1MOABMetaData-members.html  classxdg_1_1MOABMetaData.html  classxdg_1_1MOABMetaData__inherit__graph.dot  classxdg_1_1MeshManager-members.html  classxdg_1_1MeshManager.html  classxdg_1_1MeshManager__inherit__graph.dot  classxdg_1_1Metadata-members.html  classxdg_1_1Metadata.html  classxdg_1_1Metadata__inherit__graph.dot  classxdg_1_1RayTracer-members.html  classxdg_1_1RayTracer.html  classxdg_1_1RayTracer__inherit__graph.dot  classxdg_1_1TopologyInterface-members.html  classxdg_1_1TopologyInterface.html  classxdg_1_1XDG-members.html  (+152 more)
_static/: documentation_options.js
api/: cpp_xdg.html  index.html
cmake/: XDGConfig.cmake.in
docs/: glossary.rst  index.rst
intro/: index.html
methods/: acceleration_data_structures.html  design_philosophy.html  element_search.html  index.html  primitive_intersection.html  raytracing.html
search/: all_0.js  all_1.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_b.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js  variables_0.js  (+10 more)
src/: config.cpp  element_face_accessor.cpp  mesh_manager_interface.cpp  tetrahedron_contain.cpp  triangle_intersect.cpp  xdg.cpp
tests/: CMakeLists.txt  mesh_mock.h  test_bvh.cpp  util.h  (+20 more)
tools/: CMakeLists.txt  batch_point_in_volume.cpp  batch_ray_fire.cpp  gprt_test.cpp  particle_sim.cpp  point_in_volume.cpp  ray-benchmark-driver.py  ray-benchmark.cpp  ray_benchmark.cpp  ray_benchmark_deviceCode.slang  ray_benchmark_shared.h  ray_fire.cpp  segments.cpp  tally_segments.cpp  tally_segments.h  walk_elements.h  xdg_gprt_render_tool.cpp  xdg_gprt_render_tool.slang  xdg_gprt_render_tool_deviceCode.slang  xdg_gprt_render_tool_shared.h
tools/gprt/: CMakeLists.txt  deviceCode.slang  gprt_particle_sim.cpp  gprt_particle_sim.h  gprt_particle_sim_deviceCode.slang  gprt_test.cpp  sharedCode.h
(+54 files in other folders)
